# alien-evolution-pyport

./: .gitattributes  .gitignore  AI.md  CITATION.cff  CLI_UTILITIES.md  DEVELOPMENT.md  GAME_INFO.md  LICENSE  OPEN_ISSUES.md  PORTING_GUIDE.md  README.md  RESEARCH.md  RIGHTS.md  alien-evolution.html  alien-evolution.pyxapp  mkdocs.yml  pyproject.toml  startup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  pages.yml  release.yml
pages/: index.md
scripts/: build_pages_site.sh  build_pyxapp.sh
skool/: AlienEvolution.ctl  AlienEvolution.skool
src/alien_evolution/: __init__.py  __main__.py
src/alien_evolution/alienevolution/: __init__.py  blocks.py  cli.py  logic.py  run.py
src/alien_evolution/demoline/: __init__.py  cli.py  logic.py  run.py
src/alien_evolution/fileio/: __init__.py  alienevolution.py  cli_core.py  demoline.py  fmf.py  runner.py  rzx.py  stateio.py
src/alien_evolution/pyxel/: __init__.py  alienevolution.py  demoline.py  fmfplayer.py  input.py  runner.py  screen.py  sound.py
src/alien_evolution/zx/: __init__.py  config.py  inputmap.py  pointers.py  runtime.py  screen.py  state.py
tests/: test_audio_architecture_contract.py  test_cli_state_io.py  test_enemy_ai_semantics.py  test_fileio_runner.py  test_fsm_frame_pacing.py  test_gameplay_pacing_regression.py  test_kempston_port_semantics.py  test_level_transition_wait_loop.py  test_pyxel_input_gamepad.py  test_pyxel_sound_player.py  test_pyxel_state_history.py  test_renderer_workspace_refactor.py  test_runtime_cheats.py  test_runtime_state_roundtrip.py  test_score_highscore_semantics.py  test_state_envelope.py
tools/: check_runtime_global_ptr_usage.py
