[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "alien-evolution-pyport"
version = "0.1.0"
description = "Fidelity-first Python/Pyxel port of the 1987 ZX Spectrum game Alien Evolution"
authors = [{ name = "Igor Lobanov" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["zx-spectrum", "pyxel", "retro", "port"]

dependencies = [
  "pyxel>=1.9.11",
]

[project.urls]
Homepage = "https://alepoydes.github.io/alien-evolution-pyport/"
Repository = "https://github.com/alepoydes/alien-evolution-pyport"
Issues = "https://github.com/alepoydes/alien-evolution-pyport/issues"
Changelog = "https://github.com/alepoydes/alien-evolution-pyport/releases"

[project.scripts]
demoline = "alien_evolution.demoline.run:main"
demoline-cli = "alien_evolution.fileio.demoline:main"
alienevolution = "alien_evolution.alienevolution.run:main"
alienevolution-cli = "alien_evolution.fileio.alienevolution:main"
fmf-player = "alien_evolution.pyxel.fmfplayer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alien_evolution"]
include = ["src/alien_evolution/data/**"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "src/alien_evolution/data/**",
  "tools/export_skool_blocks.py",
]
